--- a/AcademyCode/AcademyCode/Views/AcademyCode/Create.cshtml
+++ b/AcademyCode/AcademyCode/Views/AcademyCode/Create.cshtml
@@ -1,13 +1,15 @@
-﻿@model Employee
+﻿
+@model EmployeeVM
 
 @{
-    var departments = new SelectList(ViewBag?.Departments, "Id", "Name");
+
+  var departments = new SelectList(ViewBag?.Departments,"Id","Name");
 
     //ViewBag.DepartmentID = new SelectList(departments, "Id", "Name");
 }
 <h2> Add New Employee </h2>
 
-<form asp-action="Create">
+<form asp-action="Create" enctype="multipart/form-data">
     <div asp-validation-summary="All"></div>
 
 
@@ -18,6 +20,9 @@
     <label asp-for="phoncontact" class="form-label"></label>
         <input asp-for="phoncontact" class="form-control" id="Datestart" />
         <span asp-validation-for="phoncontact" class="text-danger"></span>
+    <br />
+    <label asp-for="ImagePath" class="form-label"></label>
+    <input asp-for="formFile"  class="form-control" id="" />
     <br />
     
     <label asp-for="Department" class="form-label"></label>
