--- a/AcademyCode/AcademyCode/Views/AcademyCode/Index.cshtml
+++ b/AcademyCode/AcademyCode/Views/AcademyCode/Index.cshtml
@@ -1,9 +1,5 @@
 ﻿@model List<Employee>
-@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+
 
 <h2> Employee List </h2>
 <a asp-action="Create" class="btn btn-primary"> Add New Employee</a>
@@ -23,19 +19,29 @@
         <tr> 
             <td >ID </td>
             <td >Name </td>
-                <td>Phone number </td>
-            <td > Start work </td>
-                <td>Action </td>
+            <td>Image</td>
+            <td>Phone number </td>
+            <td>Start work </td>
+            <td>Action </td>
         </tr>
     </thead>
     <tbody>
         @foreach (var item in Model)
             {
                 <tr>
-                    
-                    <td> @item.Id </td>  
-                    
+                 <td> @item.Id </td>
                     <td> @item.Name </td>
+         
+                    @if (@item.ImagePath is null)
+                    {
+                        <td> <i class="bi bi-person-circle iconAccount"></i></td>
+                    }
+                    else
+                    {
+
+                        <td> <img src="~/files/Images/@item.ImagePath" class="img-fluid w-50 h-50" /> </td>
+
+                    }
                     <td> @item.phoncontact </td>
                     <td> @item.Datestart</td>
                     <td>
