--- a/AcademyCode/AcademyCode/Views/_ViewImports.cshtml
+++ b/AcademyCode/AcademyCode/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
-﻿﻿@using AcademyCode.DAL.Model
+﻿@using AcademyCode.ModelsVM;
+﻿@using AcademyCode.DAL.Model
 @using AcademyCode
 @using AcademyCode.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
