--- a/FrontEnd/angular/UpdatedAngular/UdatedAngular/src/app/app.component.html
+++ b/FrontEnd/angular/UpdatedAngular/UdatedAngular/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="container-fluid">
   <app-header></app-header>
 
-<app-main></app-main>
+<router-outlet></router-outlet>
+<!-- <app-main></app-main> -->
 <app-footer></app-footer>
 </div>
