--- a/FrontEnd/angular/UpdatedAngular/UdatedAngular/src/component/main/main.component.html
+++ b/FrontEnd/angular/UpdatedAngular/UdatedAngular/src/component/main/main.component.html
@@ -1,13 +1,40 @@
 
-<div class="card m-1" style="width: 18rem;">
-    <img src="assets/HH.jpg" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h3 class="card-title">Motivation</h3>
-      <p class="card-text">{{UserValue.name}}<br>{{UserValue.dateOfBirthe}}<br></p>
-      <ul>
-        <li *ngFor="let item of UserValue.Skills">{{item}}</li>
-      </ul>
-      <p class="card-text">كان الله في عون العماني.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
+
+  <div>
+    <label for="exampleFormControlSelect1">Category</label>
+    <select class="form-control" id="exampleFormControlSelect1" [(ngModel)]="selectedCategory" #cat>
+      <option *ngFor="let item of Catgories" [value]="item.id">{{ item.Name }}</option>
+    </select>
+    <button  class="btn btn-warning" (click)="CategoryNumber(cat.value)" > category number </button>
+    <h3>{{selectedCategory}}</h3>
   </div>
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">id</th>
+        <th scope="col">Name</th>
+        <th scope="col">Quntity</th>
+        <th scope="col">ImageURL</th>
+        <th scope="col">price</th>
+        <th scope="col">category</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of ProductList">
+        <th scope="row">{{item.id}}</th>
+        <td>{{item.Name}}</td>
+        <td>{{item.Quntity}}</td>
+        <td><img [src]="item.ImageURL" alt="productimg" width="40px"/></td>
+        <td>{{item.price}}</td>
+        <td>{{CategoryNam(item.categoryID)}}</td>
+        <td><input type="number" #InputQnt class="form-control" placeholder="input Quntity" ></td>
+        <td><button  class="btn btn-warning" (click)="TotalPrice(item.price,InputQnt.value)"> Buy </button></td>
+      </tr>
+      <tr>
+
+    </tbody>
+  </table>
+  <div>
+<h3>Total Price = {{totalselle}}</h3>
+
+</div>
